--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="image" id="image_1"></div>
                 <p class="description">Esperamos que seja muito legal e que todos gostem! Este texto que estou escrevendo agora é apenas para encher linguiça e para o nosso exemplo ficar bonito e bem preenchido na hora de vocês verem!</p>
             </div>
-            <div class="date-hour-place">18/10 - (08:30 - 10:00) - <b>LAB B2</b></div>
+            <div class="date-hour-place">18/10 - (08:30 - 10:00) - <b>Laboratório B2</b></div>
             <button class="access-button">Acessar evento</button>
         </div>
 
@@ -27,7 +27,7 @@
                 <div class="image" id="image_2"></div>
                 <p class="description">Esperamos que seja muito legal também! Este texto que estou escrevendo agora é apenas para encher linguiça e para o nosso exemplo ficar bonito e bem preenchido na hora de vocês verem!</p>
             </div>
-            <div class="date-hour-place">18/10 - (08:30 - 10:00) - <b>LAB B2</b></div>
+            <div class="date-hour-place">18/10 - (08:30 - 10:00) - <b>Laboratório B2</b></div>
             <button class="access-button">Acessar evento</button>
         </div>
 
@@ -35,9 +35,9 @@
             <h3 class="event-title">Curso Japonês</h3>
             <div class="event-info">
                 <div class="image" id="image_3"></div>
-                <p class="description">このコースでは、日本語を話す方法を教えます。気にっていただければ幸いです。 このコースでは、日本語を話す方法を教えます。気に入っていただければ幸いです。</p>
+                <p class="description"></p>
             </div>
-            <div class="date-hour-place">18/10 - (08:30 - 10:00) - <b>LAB B2</b></div>
+            <div class="date-hour-place">18/10 - (08:30 - 10:00) - <b>Laboratório B2</b></div>
             <button class="access-button">Acessar evento</button>
         </div>
         
@@ -47,7 +47,7 @@
                 <div class="image" id="image_4"></div>
                 <p class="description">Este curso terá como palestrante o Vinicius Acordi Soethe, que nunca faltou em nenhuma aula...</p>
             </div>
-            <div class="date-hour-place">18/10 - (08:30 - 10:00) - <b>LAB B2</b></div>
+            <div class="date-hour-place">18/10 - (08:30 - 10:00) - <b>Laboratório B2</b></div>
             <button class="access-button">Acessar evento</button>
         </div>
     </section>
